--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -27,6 +27,8 @@
 
     <div ng-if="vixen.selected" style="padding: 5px 5px 5px 5px; border:1px solid black">
         <div style="float:left; padding: 5px 5px 5px 5px">
+            <div title="{{vixen.selected.path}}">File name: {{vixen.selected.file_name}}</div>
+            <br/>
             Grid: {{vixen.selected.tags.grid}}
             <br/>
             Camera: {{vixen.selected.tags.camera}}
@@ -60,6 +62,13 @@
     <div ng-if="vixen.media">
     <button ng-click="vixen.save()" type="button">Save</button>
     Last saved at: {{vixen.last_save_time}}
+    <br>
+    <input id="export_csv" type="text"
+           title="Will save the file to the current directory.">
+    <button
+        onclick="jigna.models.vixen.export_csv(document.getElementById('export_csv').value);"
+        type="button">
+    Export to CSV</button>
     </div>
     <br/>
 
