Add others and pressure fields to viewer.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -57,7 +57,11 @@
             <br/>
             Dog: <input type="number" ng-model="vixen.selected.tags.dog"/>
             <br/>
+            Others: <input ng-model="vixen.selected.tags.others"/>
+            <br/>
             Temperature: <input ng-model="vixen.selected.tags.temperature"/>
+            <br/>
+            Pressure: <input ng-model="vixen.selected.tags.pressure"/>
             <br/>
             Remarks: <input ng-model="vixen.selected.tags.remarks"/>
         </div>
