Add capture field and fix csv with commas in text.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -92,6 +92,9 @@
             <label>Others</label>
             <input ng-model="vixen.selected.tags.others"/>
             <br/>
+            <label>Capture</label>
+            <input ng-model="vixen.selected.tags.capture"/>
+            <br/>
             <label>Temperature</label>
             <input ng-model="vixen.selected.tags.temperature"/>
             <br/>
