Use better code for camera options.
Based on suggestion from Prashant.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -46,8 +46,9 @@
         ng-options="g for g in vixen.available_grids track by g">
     </select>
     <label>Camera:</label>
-    <select ng-model="vixen.camera"
-        ng-options="c for c in vixen.available_cameras track by c">
+    <select ng-model="vixen.camera">
+    <option ng-repeat="camera in vixen.available_cameras" value="{{camera}}">
+        {{camera}}</option>
     </select>
 
     <div style="height:150px; width: 400px; overflow:scroll;" class="resizable">
