Switching to more reliable sync mode.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -6,7 +6,7 @@
 
         <!-- Once jigna is loaded, initialize it. -->
         <script type='text/javascript'>
-            jigna.initialize({async: true});
+            jigna.initialize({async: false});
         </script>
         <style>
             html * {
